# python-nest

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.rst  README.md  pyproject.toml  setup.cfg
nest/web/: __init__.py  asgi.py  routes.py
nest/web/static/: __init__.py  style.scss
nest/web/templates/: __init__.py  base.html  footer.html  homepage.html  navbar.html
